# its_servers

./: Its_bedal_yo.txt  README.md  mariadb.txt
dto/: AccountDTO.h  AddressDTO.h  (+10 more)
server/: CMakeLists.txt  main.cpp  mariadb_repo_setup
server/mariadb-connector-cpp/install_test/: CMakeLists.txt
server/mariadb-connector-cpp/libmariadb/: CMakeLists.txt  travis.sh
server/mariadb-connector-cpp/libmariadb/docs/: Home.md  TLS-SSL-Changes-in-MariaDB-Connector-C-3.4.md  _Footer.md  _Sidebar.md  activate_non_blocking.md  api.md  async_api.md  binlog_api.md  blocking_functions.md  build_client_apps.md  compiling.md  config_files.md  configuration_options.md  datastructures.md  dyncol_api.md  dyncol_structures.md  dyncol_typesanddefs.md  example_non_blocking.md  generic_api.md  install.md  libmysql_compat.md  libmysql_libmariadb.md  mariadb_cancel.md  mariadb_config.md  mariadb_connect.md  mariadb_connection.md  mariadb_convert_string.md  mariadb_dyncol_check.md  mariadb_dyncol_column_cmp_named.md  mariadb_dyncol_column_count.md  mariadb_dyncol_create_many_named.md  mariadb_dyncol_create_many_num.md  mariadb_dyncol_errors.md  mariadb_dyncol_exists_named.md  mariadb_dyncol_exists_num.md  mariadb_dyncol_free.md  mariadb_dyncol_get_named.md  mariadb_dyncol_get_num.md  mariadb_dyncol_has_names.md  mariadb_dyncol_init.md  (+150 more)
server/mariadb-connector-cpp/libmariadb/include/: errmsg.h  ma_common.h  ma_global.h  mariadb_com.h  mysql.h
server/mariadb-connector-cpp/src/: Version.h
server/src/database/: AddressDAO.cpp  AddressDAO.h  AdminDAO.cpp  AdminDAO.h  AuthDAO.cpp  AuthDAO.h  CategoryDAO.cpp  CategoryDAO.h  ConnectionPool.cpp  DbManager.cpp  DbManager.h  MembershipDAO.cpp  MembershipDAO.h  MenuDAO.cpp  MenuDAO.h  OrderDAO.cpp  OrderDAO.h  SearchDAO.cpp  SearchDAO.h  StoreDAO.cpp  StoreDAO.h  UserDAO.cpp  UserDAO.h
server/src/handler/: AddressHandler.cpp  AddressHandler.h  AdminHandler.cpp  AdminHandler.h  CategoryHandler.cpp  CategoryHandler.h  ChatHandler.cpp  ChatHandler.h  Dispatcher.cpp  Dispatcher.h  MenuHandler.cpp  MenuHandler.h  OrderHandler.cpp  OrderHandler.h  ReviewHandler.cpp  ReviewHandler.h  RiderHandler.cpp  RiderHandler.h  SalesHandler.cpp  SalesHandler.h  SearchHandler.cpp  SearchHandler.h  StoreHandler.cpp  StoreHandler.h  SystemHandler.cpp  SystemHandler.h  UserHandler.cpp  UserHandler.h
server/src/network/: ItsServer.cpp  ItsServer.h  PacketFramer.cpp  PacketFramer.h
server/src/session/: ChatRoomManager.cpp  ChatRoomManager.h  ClientSession.cpp  ClientSession.h  SessionManager.cpp  SessionManager.h
server/src/thread/: SafeQueue.h  ThreadPool.cpp  ThreadPool.h
server/src/util/: Logger.h  TimeUtil.cpp  TimeUtil.h
(+158 files in other folders)
